--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,4 +1,5 @@
-$color-primary: #0074D9;
+// $color-primary: #0074D9;
+$color-primary: #2ECC40;
 $color-secondary: #3D9970;
 $color-gray-1: #f7f7f7;
 $color-white-snow: #F5F5F5;
