--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'sass/variables.scss';
+@import 'sass/base.scss';
 @import 'sass/utilities.scss';
