--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,31 +1,50 @@
-.register{
-  background-color: red;
+
+@import '../../../styles.scss';
+
+.register-login{
+  // background-color: red;
   
   &__form{
     margin: 2rem auto;
     padding: 2rem;
-    width: 30%;
-    background-color: gray;
+    width: 40%;
+    background-color: $color-primary;
+    border-radius: 3%;
+    
     &__input{
-      display: block;
+    
       width: 100%;
-      margin: 1rem 0;
-      height: 2rem;
+      margin: 1rem 0rem;
+    
+      height: 3rem;
       text-align: center;
       font-size: 1rem;
+      border: .2rem white solid;
+      border-radius: 2%;
       
     }
-  &__btn-container{
-    display: flex;
-    width: 100%;
-  
-    // background-color: aquamarine;
-    input{
-     flex: 0 0 50%;
+    &__btn-container{
+      
+      width: 100%;
+      
+      input{
+        cursor: pointer;
+        width: 100%;
+      }
     }
-    button{
-      flex: 1;
+    &__loginChange{
+      text-transform: uppercase;
+      font-size: 1.4rem;
+      text-align: right;
+      padding: .7rem 0;
+     
+      &__loginLink{
+          color: $color-blue-1;
+          cursor: pointer;
+
+
+        }
+
     }
-  }
   }
 }
