Logout function and password match validation added

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -41,7 +41,7 @@
       <input name="password" type="password" placeholder="Password" formControlName="password" class="register-login__form__input">
       
       <div class="register-login__form__btn-container">
-        <input type="submit" value="register" class="btn-primary" [disabled]="!loginForm.valid">
+        <input type="submit" value="Login" class="btn-primary" [disabled]="!loginForm.valid">
       </div>
   
       <div class="register-login__form__loginChange">
