Navigation and add projects icon added

--- a/src/app/components/spends-feed/spends-feed.component.html
+++ b/src/app/components/spends-feed/spends-feed.component.html
@@ -1,5 +1,8 @@
-<p>
-  spends-feed works!
-</p>
+<app-navbar></app-navbar>
 
-<a class="btn-primary" (click)="signOut()">Sign Out</a>
+<div class="add-spend">
+  <div class="add-spend__icon">
+
+    <i class="fas fa-plus"></i>
+  </div>
+</div>
