--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,6 +1,8 @@
 // $color-primary: #0074D9;
-$color-primary: #2ECC40;
-$color-secondary: #3D9970;
+$color-primary: #8BC34A;
+$color-primary-dark: #519657;
+$color-primary-light: #b2fab4;
+$color-secondary: #fafafa;
 $color-gray-1: #f7f7f7;
 $color-white-snow: #F5F5F5;
 $color-yellow-1: #FFDC00;
