--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -20,5 +20,5 @@ body{
  // padding: 2rem;
  font-family: 'IBM Plex Sans Condensed', sans-serif;
  overflow-x: hidden;
- color: $color-gray-1;
+ background-color: $color-secondary;
 }
