--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,24 +1,45 @@
 
 @import '../../../styles.scss';
 
+.container{
+  height: 100vh;
+  background-color: $color-primary;
+  display: flex;
+  align-items: center;
+}
+
+.title{
+  text-align: center;
+  color: white;
+  i{
+    font-size: 15rem;
+  }
+  h1{
+    font-size: 5rem;
+  }
+}
+
 .register-login{
   // background-color: red;
-  
+  flex: 1;
   &__form{
-    margin: 2rem auto;
+    margin: 0rem auto;
     padding: 2rem;
-    width: 40%;
-    background-color: $color-primary;
-    border-radius: 3%;
+    width: 60%;
+
+    @media only screen and (max-width:50em) {
+      width:100%;
+    }
+    
+
     
     &__input{
     
       width: 100%;
       margin: 1rem 0rem;
-    
-      height: 3rem;
+      height: 5rem;
       text-align: center;
-      font-size: 1rem;
+      font-size: 2rem;
       border: .2rem white solid;
       border-radius: 2%;
       
@@ -30,6 +51,7 @@
       input{
         cursor: pointer;
         width: 100%;
+        font-size: 2.5rem;
       }
     }
     &__loginChange{
