Add-spend form & Firebasedatabase connection added

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -73,7 +73,7 @@
   height: 100%;
   transition: all 1s;
  
-  background-color: $color-primary;
+  background-color: $color-primary-light;
   z-index: 50;
   overflow-x: hidden;
 
