--- a/src/app/components/spends-feed/spends-feed.component.html
+++ b/src/app/components/spends-feed/spends-feed.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 
-<div class="add-spend">
+<div class="add-spend" (click)="addSpendRoute()">
   <div class="add-spend__icon">
 
     <i class="fas fa-plus"></i>
