--- a/src/app/components/spends-feed/spends-feed.component.scss
+++ b/src/app/components/spends-feed/spends-feed.component.scss
@@ -2,12 +2,13 @@
 
 .add-spend{
   position: fixed;
-  top: 90%;
+  bottom: 10%;
   right: 15%;
   width: 8rem;
   height: 8rem;
   background-color: $color-primary;
   border-radius: 50%; 
+  cursor: pointer;
   
 
   &__icon{
