--- a/src/app/components/spends-feed/spends-feed.component.scss
+++ b/src/app/components/spends-feed/spends-feed.component.scss
@@ -24,3 +24,54 @@
   }
 
 }
+
+
+.expense{
+  display: flex;
+  margin: 1rem auto;
+  font-size: 2rem;
+  background-color: white;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem 0;
+  width: 95%;
+  // background-color: greenyellow;
+  
+
+  &__category{
+    display: flex;
+    // background-color: red;
+    flex: 1;
+    height: 100%;
+    height: 7rem;
+    align-items: center;
+
+    &__icon{
+      margin: 0 2rem;
+      
+      &__bg{
+
+        padding: 2rem;
+        border-radius: 100%;
+        background-color: $color-primary;
+        color: white;
+      }
+    }
+
+    &__name{
+      display: flex;
+      align-items: center;
+    }
+  }
+
+  &__amount-date{
+    // background-color: blue;
+    display: flex;
+    flex: 1;
+    height: 7rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+  }
+}
