--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -2,7 +2,7 @@
 $color-primary: #8BC34A;
 $color-primary-dark: #519657;
 $color-primary-light: #b2fab4;
-$color-secondary: #fafafa;
+$color-secondary: #efefef;
 $color-gray-1: #f7f7f7;
 $color-white-snow: #F5F5F5;
 $color-yellow-1: #FFDC00;
