Angular-notifier installed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,4 @@
 @import 'sass/base.scss';
 @import 'sass/utilities.scss';
 @import 'sass/animations.scss';
+@import 'node_modules/angular-notifier/styles.scss'
