--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -44,9 +44,12 @@
       border-radius: 2%;
 
       &__error-msg{
-        color: red;
+        color:white;
+        background-color: #ff0033;
         font-size: 1.8rem;
-        font-weight: bold;
+        padding: .5rem;
+        border-radius: 5%;
+        
       }
       
     }
