--- a/src/app/components/user/user.component.scss
+++ b/src/app/components/user/user.component.scss
@@ -1,2 +1,97 @@
+
 @import '../../../styles.scss';
 
+.user-spend{
+ display: flex;
+ width: 50%;
+ margin: 1rem auto;
+ align-items: center;
+ justify-content: space-between;
+ background-color: white;
+  @media only screen and (max-width: 50em) {
+   width: 95%;
+  } 
+ &__name{
+  padding: 1.5rem;
+  font-size: 2rem;
+  text-transform: uppercase;
+  margin-left: 3rem;
+  flex: 1;
+ }
+ &__image{
+  
+  &__circle{
+   background-color: $color-primary-dark;
+   border-radius: 50%;
+   padding: 1rem;
+   margin-right: 3rem;
+   img{
+    height: 2rem;
+    width: 2.5rem;
+   }
+  }
+ }
+ &__delete{
+  color: $color-deep-gray;
+  font-size: 2rem;
+  flex: 0 0 0.9;
+  margin-right: 1rem;
+  transition: all .3s;
+ }
+ &__delete:hover{
+  font-size: 2.2rem;
+  transition: all .3s;
+ }
+}
+
+
+
+.add-categories-container{
+ margin: 5rem 0;
+
+ h3{
+  text-align: center;
+  font-size: 3rem;
+ } 
+}
+.add-categories{
+  margin: 2rem auto;
+  width: 60%;
+  @media only screen and (max-width: 50em) {
+   width: 90%;
+   } 
+ &__form{
+  
+  width: 100%;
+  padding: 2.5rem;
+  font-size: 2rem;
+  text-transform: uppercase;
+  border: none;
+ }
+  &__container{
+    position: relative;
+    // background-color: yellow;
+    
+    &__button{
+      position: absolute;
+      top: 50%;
+      right: -5%;
+      transform: translateY(-50%);
+      background-color: $color-primary-dark;
+      border-radius: 50%;
+      padding: 3rem;
+      i{
+        color: white;
+        font-size: 3.5rem;
+        transition: all .2s;
+      }
+    }
+
+    &__button:hover{
+      i{
+        font-size: 4rem;
+        transition: all .2s;
+      }
+    }
+  }
+}
