Spend category CRUD functionality successfully implemented in both user & add components

--- a/src/app/components/add-spend/add-spend.component.scss
+++ b/src/app/components/add-spend/add-spend.component.scss
@@ -1,6 +1,14 @@
 
 @import '../../../styles.scss';
 
+.spinner{
+  text-align: center;
+  h4{
+    color: white;
+    font-size: 4rem;
+  }
+}
+
 .container{
   
   background-color: $color-primary;
