--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -91,6 +91,7 @@
     margin: 5rem 5rem;
     font-size: 3rem;
     color: white;
+
     z-index: 51;
     cursor: pointer;
 
@@ -122,9 +123,12 @@
           text-align: center;
           list-style-type: none;
           a{
+          // color: $color-black-1;
           color: white;
+          font-weight: 600;
           text-transform: uppercase;
-          font-size: 2rem;
+          text-shadow: 4px 4px 14px rgba(150, 150, 150, 1);
+          font-size: 3rem;
           text-decoration: none;
           cursor: pointer;
           }
