--- a/src/app/components/add-spend/add-spend.component.html
+++ b/src/app/components/add-spend/add-spend.component.html
@@ -1,23 +1,30 @@
 <app-navbar></app-navbar>
 
+
 <div class="container">
-  <!-- Login form -->
-  <section class="add-spend">
   
+  <section class="add-spend">
+    
     <div class="title">
       
       <h2>Gave away some money?</h2>
       <h1>Record it here and keep tracking your spends!</h1>
     </div>
-  
+    
+    
     <form [formGroup]="addForm" (ngSubmit)="addSubmit()" class="add-spend__form">
       <!-- Amount input -->
       <label for="amount">How much did you spend?</label>
       <input name="amount" type="number" placeholder="1500" formControlName="amount" class="add-spend__form__input-text">
-  
+      
       <!-- Category input -->
       <h2>Select a category</h2>
-      <div class="add-spend__form__input-radio" *ngFor="let category of defaultCostCategories" >
+      <!-- Loading spinnger -->
+      <div class="spinner" *ngIf="!isCategoriesLoaded">
+          <h4>Loading categories...</h4>
+        <img src="../../../assets/img/loader2.svg" alt="">
+      </div>
+      <div class="add-spend__form__input-radio" *ngFor="let category of user.costCategories" >
         <label for="category">
           <input name="category" id="{{category.name}}" formControlName="category" class="add-spend__form__input-radio__field" type="radio" value="{{category.name}}">
             <label for="{{category.name}}">{{category.name}}</label>
