--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -5,6 +5,9 @@
 <h2>Select a category</h2>
 
 
+<div class="spinner" *ngIf="!isCategoriesLoaded">
+  <img src="../../../assets/img/loader.gif" alt="">
+</div>
 
 <div class="user-spend" *ngFor="let category of user.costCategories; let i = index">
   <div class="user-spend__name">
@@ -33,8 +36,12 @@
      <i class="fas fa-plus"></i>
     </div>
    </div>
-   .
-  
+   <!-- Save changes -->
+   <div class="save-changes" *ngIf="isCategoriesEdited" (click)="saveCategoryChanges()">
+     <button class="btn btn-primary save-changes__btn">
+       Save changes
+     </button>
+   </div>
+   
   </div>
-
  </div>
