--- a/src/app/components/spends-feed/spends-feed.component.html
+++ b/src/app/components/spends-feed/spends-feed.component.html
@@ -19,7 +19,7 @@
     <div class="expense__category">
       <div class="expense__category__icon">
         <div class="expense__category__icon__bg">
-          <i class="fas fa-glass-martini"></i>
+          <img src="../../../assets/img/{{expense.category}}.svg" alt="{{expense.category}}">
         </div>
       </div>
       <div class="expense__category__name">
