--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -22,3 +22,4 @@ $color-red-primary: #FF4136;
 $color-black-1:#111111;
 $color-deep-gray: #393f4d;
 $color-dark-slate: #1d1e22;
+$color-warning: #ff0033;
