--- a/src/app/components/user/user.component.scss
+++ b/src/app/components/user/user.component.scss
@@ -108,3 +108,69 @@
     font-size: 2.5rem !important;
   }
 }
+
+.restore-defaults{
+  width: 75%;
+  text-align: right;
+  margin: 2rem 0;
+  button{
+    cursor: pointer;
+  }
+}
+
+.container{
+  position: relative;
+  height: 100%;
+}
+
+.restore-modal{
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 20;
+  width: 100%;
+  height: 100%;
+  background-color: $color-gray-1;
+    &__window{
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    background-color: $color-primary;
+    padding: 2rem;
+    transform: translate(-50%,-50%);
+    @media only screen and (max-width:50em) {
+      left: 0;
+      transform: translate(0,-50%);
+    }
+      &__options{
+        display: flex;
+        &__restore{
+            background-color: $color-red-primary;
+            padding: .7rem 1.5rem; 
+            border: none;
+            color: white;
+            text-transform: uppercase;
+            font-size: 1.7rem;
+            margin-right: 1rem;
+            cursor: pointer;
+                      
+          }
+        &__cancel{
+            background-color: $color-yellow-1;
+            padding: .7rem 1.5rem; 
+            border: none;
+            color: white;
+            text-transform: uppercase;
+            font-size: 1.7rem;
+            cursor: pointer;
+        }
+      }  
+    
+
+  p{
+    font-size: 2.4rem;
+    color: white;
+    margin: 2rem 0;
+  }
+  }
+}
